update md